added SnackBar and setted the firebase

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -9,7 +9,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".SignUpActivity">
+        tools:context=".activities.SignUpActivity">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_sign_up_activity"
