--- a/app/src/main/res/layout/activity_getting_started.xml
+++ b/app/src/main/res/layout/activity_getting_started.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_gravity="center"
-    tools:context=".GettingStartedActivity">
+    tools:context=".activities.GettingStartedActivity">
     <TextView
         android:gravity="center"
         android:layout_height="wrap_content"
