--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -15,5 +15,6 @@
             android:background="@drawable/nav_header_main_background"
             app:popupTheme="@style/PopupOverlay"/>
     </com.google.android.material.appbar.AppBarLayout>
+    <include layout="@layout/main_content"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
